# docs/swagger.yaml
@@ -117,6 +117,17 @@ definitions:
     - content
     - title
     type: object
+  api.registerRequest:
+    properties:
+      email:
+        type: string
+      password:
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
   api.renewAccessTokenRequest:
     properties:
       refresh_token:
@@ -270,6 +281,22 @@ paths:
       - AccessToken: []
       tags:
       - note
+  /register:
+    post:
+      parameters:
+      - description: query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/api.registerRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: ""
+      tags:
+      - user
   /users:
     post:
       parameters:
@@ -327,6 +354,24 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/api.renewAccessTokenResponse'
+      tags:
+      - user
+  /verify:
+    get:
+      parameters:
+      - in: query
+        name: email
+        required: true
+        type: string
+      - in: query
+        name: token
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.userResponse'
       tags:
       - user
   /webs:
